<resources>
    <string name="app_name">AllatraUnites</string>
    <string name="text_thanks_to_download">Thanks for installing AllatRaUnites. This application aims to bring together people who support the idea of ​​a creative society</string>
    <string name="text_creative_society">A constructive society is ... (in two sentences)</string>
    <string name="text_add_your_email">To support the idea, please enter your email address</string>
    <string name="text_add_your_name">Please enter your name and country</string>
    <string name="txt_hint_email">e-mail</string>
    <string name="txt_hint_name">name</string>
    <string name="txt_hint_country">country</string>
    <string name="text_add_your_name_in_mother_lang">* Please enter your name in your native language.</string>
    <string name="text_i_give_consent">* I accept the confidentiality agreement and agree to the processing of my personal data</string>
    <string name="text_i_support_idea">I support the idea of ​​a creative society</string>
    <string name="text_please_agree_to_give_consent">Please accept the privacy agreement</string>
    <string name="text_thanks_for_supporting_1">Thank you,</string>
    <string name="text_thanks_for_supporting_2">for supporting us</string>
    <string name="text_number_of_people_supported_1">The idea of ​​a creative society has already been supported by</string>
    <string name="text_number_of_people_supported_2">people from</string>
    <string name="text_number_of_people_supported_3">different countries of the world</string>
    <string name="text_number_of_people_supported_today_1">Today the idea of ​​a creative society was supported</string>
    <string name="text_number_of_people_supported_today_2">people from</string>
    <string name="text_number_of_people_supported_today_3">different countries of the world</string>
    <string name="text_among_them">Among which:</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_sign_up_for_conference_and_show_previous">Register for the international conference09 May 2021</string>
    <string name="text_9th_may_about_main">Creative changes begin with the decision of people, and this decision becomes the beginning of the future!\n\nA large-scale teleconference on May 9, 2020 is organized by people themselves on their own in their countries and regions!</string>
    <string name="txt_en_lang">EN</string>
    <string name="text_realities_of_our_times_1">The realities of our time: military threats and conflicts, geopolitical tensions, millions of refugees, children dying of hunger, economic crises - all this against the backdrop of rapidly growing climatic disasters that pose humanity with a key choice between the survival or death of civilization.</string>
    <string name="text_realities_of_our_times_2">And this is all the result of the consumer format of society. Are we dreaming of such a world? Is such a future we want for our children and grandchildren? Is this the world in which we ourselves want to live?</string>
    <string name="text_people_have_chance_1">BUT HUMANITY HAS A CHANCE</string>
    <string name="text_people_have_chance_2">A unique world-wide event “SOCIETY. LAST CHANCE ”on May 9, 2020, on the platform of the ALLATRA International Public Movement, will unite people from 180 countries of the world in one online teleconference in an open global dialogue:</string>
    <string name="text_people_have_chance_3">“Do we want a constructive society?”</string>
    <string name="text_may_2019_conference">On May 11, 2019, a unique event of global scale took place on the platform of ALLATRA International Public Movement - an international video-conference “SOCIETY. THE LAST CHANCE”..</string>
    <string name="text_photos">Photos</string>
    <string name="text_see_all">See All</string>
    <string name="text_how_it_was">MAY 11, \n2019.\n\nHow it was</string>
    <string name="text_third_saturday_1">Hundreds of thousands of people will participate in this world event</string>
    <string name="text_third_saturday_2">on the third Saturday of May 2021</string>
    <string name="text_third_saturday_3">including diplomats, leaders of various international and non-profit organizations, politicians, scientists, representatives of the media, culture and socially active people from different countries. Interactive video broadcast in real time with simultaneous translation into different languages ​​of the world will allow a lively dialogue between people from different continents.</string>
    <string name="text_third_saturday_4">At this historic international video conference, thousands of people from all over the world will have the opportunity to come together and share their opinions and visions of what the future of our society should be like.</string>
    <string name="text_international_conference">International conference \n"SOCIETY. LAST CHANCE" \nMay 9, 2020.\nUnite and create!</string>
    <string name="text_we_live_in_creative_soc">“We would already live in a constructive society today if we had begun to act yesterday. And yesterday they would start acting if the day before yesterday they started talking about him. ”</string>
    <string name="text_im_danilov">I. M. Danilov</string>
    <string-array name="languages">
        <item>EN</item>
        <item>RU</item>
        <item>UA</item>
        <item>CS</item>
        <item>ES</item>
    </string-array>
</resources>
